--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=LTC2942
-version=1.1.0
+version=1.2.0
 author=Macro Yau
 maintainer=Macro Yau
-sentence=Library for Analog Devices LTC2942 battery gas gauge.
-paragraph=Supports both LTC2942 and LTC2942-1 devices.
+sentence=Library for Analog Devices LTC2941 and LTC2942 battery gas gauges.
+paragraph=Supports LTC2941, LTC2941-1, LTC2942, and LTC2942-1 devices.
 category=Sensors
 url=https://github.com/MacroYau/LTC2942-Arduino-Library
 includes=LTC2942.h
